test complete for create realm and client account

--- a/themes/medad-theme-v5/login/messages/messages_en.properties
+++ b/themes/medad-theme-v5/login/messages/messages_en.properties
@@ -1,5 +1,5 @@
 doLogIn=Sign In
-doRegister=Register
+doRegister=Sign Up
 doCancel=Cancel
 doSubmit=Submit
 doBack=Back
@@ -21,8 +21,9 @@ kerberosNotConfigured=Kerberos Not Configured
 kerberosNotConfiguredTitle=Kerberos Not Configured
 bypassKerberosDetail=Either you are not logged in by Kerberos or your browser is not set up for Kerberos login.  Please click continue to login in through other means
 kerberosNotSetUp=Kerberos is not set up.  You cannot login.
-registerTitle=Register
+registerTitle=Create an account in Medad
 loginAccountTitle=Sign in to your account
+loginAccountSubTitle=Welcome back! Please enter your details.
 loginTitle=Sign in to {0}
 loginTitleHtml={0}
 impersonateTitle={0} Impersonate User
@@ -32,7 +33,7 @@ unknownUser=Unknown user
 loginTotpTitle=Mobile Authenticator Setup
 loginProfileTitle=Update Account Information
 loginIdpReviewProfileTitle=Update Account Information
-loginTimeout=Your login attempt timed out.  Login will start from the beginning.
+loginTimeout=Your authentication session has been restarted. Login will start from the beginning.
 reauthenticate=Please re-authenticate to continue
 oauthGrantTitle=Grant Access to {0}
 oauthGrantTitleHtml={0}
@@ -44,6 +45,7 @@ errorTitle=We are sorry...
 errorTitleHtml=We are <strong>sorry</strong> ...
 emailVerifyTitle=Email verification
 emailForgotTitle=Forgot Your Password?
+emailForgotSubTitle=No worries, we’ll send you reset instructions.
 updatePasswordTitle=Update password
 codeSuccessTitle=Success code
 codeErrorTitle=Error code\: {0}
@@ -52,6 +54,7 @@ browserRequired=Browser required to login
 browserContinue=Browser required to complete login
 browserContinuePrompt=Open browser and continue login? [y/n]:
 browserContinueAnswer=y
+resetPassword=Reset Password
 
 # Transports
 usb=USB
@@ -61,14 +64,19 @@ internal=Internal
 unknown=Unknown
 
 termsTitle=Terms and Conditions
-termsText=<p>Terms and conditions to be defined</p>
+termsText=Terms and conditions to be defined
 termsPlainText=Terms and conditions to be defined.
+termsData=<p>By logging in and using this system, you agree to the following terms and conditions. Please read them carefully before proceeding.</p><h2>1. Acceptance</h2><p>These Terms govern your access to and use of this system. By logging in, you confirm that you have read, understood, and accepted these Terms.</p><h2>2. Account Responsibility</h2><p>You must be authorized to access the account you are using. You are responsible for keeping your login credentials confidential and for all activities carried out through your account.</p><h2>3. Acceptable Use</h2><p>When using this system, you must comply with all applicable laws and institutional policies. Prohibited activities include:</p><ul><li>Unauthorized access, hacking, or data scraping.</li><li>Distributing malicious software or disrupting system operations.</li><li>Sharing content that infringes rights or violates laws.</li></ul><h2>4. Data Collection &amp; Privacy</h2><p>The system collects account and usage information (such as login times and audit logs) to operate securely. Personal data handling follows our Privacy Policy.</p><h2>5. Access Control</h2><p>Your login grants access based on your assigned role. Additional permissions may be required to view or download restricted content. Attempting to bypass access restrictions is a violation of these Terms.</p><h2>6. System Updates &amp; Suspension</h2><p>We may update the system or these Terms at any time. Accounts may be suspended or terminated if violations occur, or if required for security or legal reasons.</p><h2>7. Security</h2><p>If you notice any unauthorized access or security incident, you must report it immediately to the system administrator.</p><h2>8. Liability</h2><p>This service is provided "as is." We are not liable for indirect or consequential damages resulting from your use of the system.</p><h2>9. Governing Law</h2><p>These Terms are governed by the laws and policies of the institution operating this service. Disputes will be handled according to institutional procedures.</p>
+policyTitle=Privacy Policy
+policyText=Privacy Policy to be defined
+acceptAll=I agreed with all
+and=and
 
 recaptchaFailed=Invalid Recaptcha
 recaptchaNotConfigured=Recaptcha is required, but not configured
 consentDenied=Consent denied.
 
-noAccount=New user?
+noAccount=Don’t have an account?
 username=Username
 usernameOrEmail=Username or email
 firstName=First name
@@ -158,6 +166,7 @@ emailLinkIdp4=If you already verified the email in different browser
 emailLinkIdp5=to continue.
 
 backToLogin=&laquo; Back to Login
+backToPreviousStep=Back to Previous Step
 
 emailInstruction=Enter your username or email address and we will send you instructions on how to create a new password.
 emailInstructionUsername=Enter your username and we will send you instructions on how to create a new password.
@@ -204,7 +213,7 @@ invalidUsernameMessage=Invalid username.
 invalidUsernameOrEmailMessage=Invalid username or email.
 invalidPasswordMessage=Invalid password.
 invalidEmailMessage=Invalid email address.
-accountDisabledMessage=Account is disabled, contact your administrator.
+accountDisabledMessage=Your account is currently disabled. Please contact support if you believe this is a mistake.
 accountTemporarilyDisabledMessage=Account is temporarily disabled; contact your administrator or retry later.
 expiredCodeMessage=Login timeout. Please sign in again.
 expiredActionMessage=Action expired. Please continue with login now.
@@ -254,11 +263,14 @@ federatedIdentityExistsMessage=User with {0} {1} already exists. Please login to
 federatedIdentityUnavailableMessage=User {0} authenticated with identity provider {1} does not exist. Please contact your administrator.
 
 confirmLinkIdpTitle=Account already exists
+confirmOverrideIdpTitle=Account already linked to another account
 federatedIdentityConfirmLinkMessage=User with {0} {1} already exists. How do you want to continue?
+federatedIdentityConfirmOverrideMessage=You are trying to link your account: {0} with the {1} account: {2}. But your account is already linked with a different {3} account: {4}. Can you confirm if you want to replace the existing link with the new account?
 federatedIdentityConfirmReauthenticateMessage=Authenticate to link your account with {0}
 nestedFirstBrokerFlowMessage=The {0} user {1} is not linked to any known user.
 confirmLinkIdpReviewProfile=Review profile
 confirmLinkIdpContinue=Add to existing account
+confirmOverrideIdpContinue=Yes, override link with current account
 
 configureTotpMessage=You need to set up Mobile Authenticator to activate your account.
 configureBackupCodesMessage=You need to set up Backup Codes to activate your account.
@@ -266,7 +278,8 @@ updateProfileMessage=You need to update your user profile to activate your accou
 updatePasswordMessage=You need to change your password to activate your account.
 resetPasswordMessage=You need to change your password.
 verifyEmailMessage=You need to verify your email address to activate your account.
-linkIdpMessage=You need to verify your email address to link your account with {0}.
+linkIdpMessage=You need to verify your email address to link your account with {0}
+verifyEmailToLinkIdpMessage=You need to verify your email address to link your account with {0}
 
 emailSentMessage=You should receive an email shortly with further instructions.
 emailSendErrorMessage=Failed to send email, please try again later.
@@ -307,7 +320,7 @@ implicitFlowDisabledMessage=Client is not allowed to initiate browser login with
 invalidRedirectUriMessage=Invalid redirect uri
 unsupportedNameIdFormatMessage=Unsupported NameIDFormat
 invalidRequesterMessage=Invalid requester
-registrationNotAllowedMessage=Registration not allowed
+registrationNotAllowedMessage=This service is only for registered users, please contact administrators in order to access the services
 resetCredentialNotAllowedMessage=Reset Credential not allowed
 
 permissionNotApprovedMessage=Permission not approved.
@@ -325,7 +338,7 @@ sessionNotActiveMessage=Session not active.
 invalidCodeMessage=An error occurred, please login again through your application.
 cookieNotFoundMessage=Cookie not found. Please make sure cookies are enabled in your browser.
 insufficientLevelOfAuthentication=The requested level of authentication has not been satisfied.
-identityProviderUnexpectedErrorMessage=Unexpected error when authenticating with identity provider
+identityProviderUnexpectedErrorMessage=Something went wrong during the login, please try again later!
 identityProviderMissingStateMessage=Missing state parameter in response from identity provider.
 identityProviderNotFoundMessage=Could not find an identity provider with the identifier.
 identityProviderLinkSuccess=You successfully verified your email. Please go back to your original browser and continue there with the login.
@@ -428,7 +441,12 @@ existingAccountQuestion.title=Do you have an account with us?
 existingAccountQuestion.description=If you choose "yes", your {0} account will be linked to your existing {1} account. If you choose "no", a new {1} account will be created for you based on your {0} account. Note: This is a one-time process. Your future logins with {0} will be seamless.
 existingAccountQuestion.yes=Yes
 existingAccountQuestion.no=No
+existingAccountQuestion.create=Create new account
+existingAccountQuestion.existing=I have an account
 existingAccountQuestionError=Please choose yes or no
+
+# Copyright
+copyright=© {0} Medad. All rights reserved.
 
 # Recovery Codes
 auth-recovery-authn-code-form-display-name=Recovery Authentication Code
@@ -475,7 +493,7 @@ webauthn-error-user-not-found=Unknown user authenticated by the Security key.
 
 # Identity provider
 identity-provider-redirector=Connect with another Identity Provider
-identity-provider-login-label=Or sign in with
+identity-provider-login-label=Or
 
 finalDeletionConfirmation=If you delete your account, it cannot be restored. To keep your account, click Cancel.
 irreversibleAction=This action is irreversible
@@ -488,6 +506,7 @@ accountUnusable=Any subsequent use of the application will not be possible with 
 userDeletedSuccessfully=User deleted successfully
 
 access-denied=Access denied
+access-denied-when-idp-auth=User cancelled the login
 
 frontchannel-logout.title=Logging out
 frontchannel-logout.message=You are logging out from following apps
@@ -495,3 +514,7 @@ logoutConfirmTitle=Logging out
 logoutConfirmHeader=Do you want to logout?
 doLogout=Logout
 
+# UAE Pass
+uaepass.AccountTypeNotAllowed=You are not eligible to access this service. Your account is either not upgraded or you have a visitor account. Please contact {0} to access the services.
+uaepass.fallbackErrorMessage=An unexpected error occurred while processing your UAE Pass login. Please try to upgrade your UAE Pass account or contact your system administrator.
+uaepass.tryLoginWithAnotherMethod=Try logging in with another method
